@@ -6,4 +6,4 @@ COPY target/*.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java","--enable-preview","-jar","app.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
